Nov 04 2003 - 0.6:
Added rule name to LogWindow; thx to Roman Legat for the suggestion.
Updated PMD version to 1.3.
Changed license to BSD-style.

August 27 2003 - 0.5:
Updated to pmd-1.2.1.
Implemented various window/tab features; thx to Ronald Kinion for the suggestions.
Added browse buttons to settings panel.

June 20, 2003 - 0.4:
Upgraded to pmd-1.1.

April 3, 2003 - 0.3:
Implemented the "centralized rule selection storage" feature as suggested by Ronald Kinion.

April 1, 2003 - 0.2:
Updated to work with pmd-1.04.
Implemented several of Ronald Kinion's suggestions.

February 25, 2003 - 0.1:
Initial release